# search

./: Cargo.toml  README.md  poem.txt
src/: args.rs  lib.rs  main.rs
src/lib/: cli_feedback.rs  content_search.rs  file_search.rs  mod.rs  utility.rs
src/model/: args.rs  config.rs  final_result.rs  mod.rs  results.rs  search_result.rs
src/test/: speed_test.rs  test.txt
src/util/: cli_feedback.rs  content_search.rs  file_search.rs  mod.rs
