[package]
name = "search"
version = "1.0.1"
edition = "2021"
description = "A recursive search tool to locate files or find certain strings in files"
repository = "https://github.com/ValuONE/search"
keywords = ["search", "find", "locate"]
categories = ["command-line-utilities", ]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

jwalk = "0.8.1"
indicatif = "0.17.8"
clap = { version = "4.5.8", features = ["derive"] }